--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-project",
+  "name": "vite-shop",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -12,6 +12,8 @@
     "vue": "^3.0.5"
   },
   "devDependencies": {
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "@vitejs/plugin-vue": "^1.3.0",
@@ -26,6 +28,7 @@
     "lint-staged": "^11.1.2",
     "typescript": "^4.3.2",
     "vite": "^2.4.4",
+    "vite-plugin-eslint": "^1.3.0",
     "vue-tsc": "^0.2.2"
   },
   "lint-staged": {
