--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "vue": "^3.0.5",
     "vue-router": "^4.0.11",
     "vuex": "^4.0.2"
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@types/node": "^16.7.1",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "@vitejs/plugin-vue": "^1.3.0",
@@ -29,6 +31,7 @@
     "eslint-plugin-vue": "^7.16.0",
     "husky": "^7.0.1",
     "lint-staged": "^11.1.2",
+    "sass": "^1.38.0",
     "typescript": "^4.3.2",
     "vite": "^2.4.4",
     "vite-plugin-eslint": "^1.3.0",
